version/0.14/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.FilenameList.rst.txt
ansys.fluent.core.solver.flobject.FilenameList
==============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: FilenameList

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~FilenameList.__init__
      ~FilenameList.allowed_values
      ~FilenameList.default_value
      ~FilenameList.get_attr
      ~FilenameList.get_attrs
      ~FilenameList.get_state
      ~FilenameList.is_active
      ~FilenameList.is_read_only
      ~FilenameList.print_state
      ~FilenameList.set_flproxy
      ~FilenameList.set_state
      ~FilenameList.to_python_keys
      ~FilenameList.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~FilenameList.flproxy
      ~FilenameList.fluent_name
      ~FilenameList.obj_name
      ~FilenameList.parent
      ~FilenameList.path
   
   