version/0.20/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.FilenameList.rst.txt
ansys.fluent.core.solver.flobject.FilenameList
==============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: FilenameList

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~FilenameList.__init__
      ~FilenameList.after_execute
      ~FilenameList.before_execute
      ~FilenameList.default_value
      ~FilenameList.file_purpose
      ~FilenameList.find_object
      ~FilenameList.get_attr
      ~FilenameList.get_attrs
      ~FilenameList.get_state
      ~FilenameList.is_active
      ~FilenameList.is_read_only
      ~FilenameList.print_state
      ~FilenameList.set_flproxy
      ~FilenameList.set_state
      ~FilenameList.state_with_units
      ~FilenameList.to_python_keys
      ~FilenameList.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~FilenameList.file_transfer_service
      ~FilenameList.flproxy
      ~FilenameList.fluent_name
      ~FilenameList.obj_name
      ~FilenameList.parent
      ~FilenameList.path
      ~FilenameList.python_name
      ~FilenameList.python_path
   
   